--- a/_config.yml
+++ b/_config.yml
@@ -8,6 +8,7 @@ description: > # this means to ignore newlines until "baseurl:"
 baseurl: "" # the subpath of your site, e.g. /blog/
 url: "http://yourdomain.com" # the base hostname & protocol for your site
 github_username: "manchunlam"
+paginate: 5
 
 # Build settings
 markdown: "redcarpet"
